--- a/src/plugin/plugin.scss
+++ b/src/plugin/plugin.scss
@@ -1,19 +1,28 @@
-.test-svg {
+.pie-chart {
   border: 1px solid black;
   width: 300px;
   height: 300px;
+
+  &__svg {
+    width: 100%;
+    height: 100%;
+  }
+
+  &__paths {
+
+  }
+
+  &__outer-path {
+    /* transform: rotate(60deg); */
+    fill: url(#red-blue);
+  }
+
+  &__outer-path:hover {
+    fill: url(#red-blue2);
+  }
 }
 
-.test1 {
-  /* transform: rotate(60deg); */
-  fill: url(#red-blue);
-}
-
-.test1:hover {
-  fill: url(#red-blue2);
-}
-
-.stop1 {
+/* .stop1 {
   stop-color: red;
 }
 .stop2 {
@@ -22,7 +31,7 @@
 }
 .stop3 {
   stop-color: blue;
-}
+} */
 
 .test-button {
   width: 100px;
