--- a/example.css
+++ b/example.css
@@ -67,28 +67,29 @@ body {
   display: flex;
   flex-direction: column; }
 
-.test-svg {
+.pie-chart {
   border: 1px solid black;
   width: 300px;
   height: 300px; }
+  .pie-chart__svg {
+    width: 100%;
+    height: 100%; }
+  .pie-chart__outer-path {
+    /* transform: rotate(60deg); */
+    fill: url(#red-blue); }
+  .pie-chart__outer-path:hover {
+    fill: url(#red-blue2); }
 
-.test1 {
-  /* transform: rotate(60deg); */
-  fill: url(#red-blue); }
-
-.test1:hover {
-  fill: url(#red-blue2); }
-
-.stop1 {
-  stop-color: red; }
-
+/* .stop1 {
+  stop-color: red;
+}
 .stop2 {
   stop-color: black;
-  stop-opacity: 0; }
-
+  stop-opacity: 0;
+}
 .stop3 {
-  stop-color: blue; }
-
+  stop-color: blue;
+} */
 .test-button {
   width: 100px;
   height: 50px;
