--- a/example.css
+++ b/example.css
@@ -74,22 +74,11 @@ body {
   .pie-chart__svg {
     width: 100%;
     height: 100%; }
-  .pie-chart__outer-path {
-    /* transform: rotate(60deg); */
-    fill: url(#red-blue); }
-  .pie-chart__outer-path:hover {
-    fill: url(#red-blue2); }
+  .pie-chart__inner-path {
+    fill: white; }
+  .pie-chart__central-circle {
+    fill: white; }
 
-/* .stop1 {
-  stop-color: red;
-}
-.stop2 {
-  stop-color: black;
-  stop-opacity: 0;
-}
-.stop3 {
-  stop-color: blue;
-} */
 .test-button {
   width: 100px;
   height: 50px;
