--- a/src/plugin/pie-chart.pug
+++ b/src/plugin/pie-chart.pug
@@ -13,22 +13,33 @@ mixin pie-chart(options = {})
     } = options;
 
   div(class=["pie-chart"] data-radius=radius data-subradius=subradius data-hovered-subradius=hoveredSubradius)
-    svg(class=["pie-chart__svg"])
-      defs(class=["pie-chart__defs"])
-        - for(let i = 0; i < segments.length; i += 1) {
-          linearGradient(class=["pie-chart__gradient"] id=`${segments[i].name}${i}` x1="0" y1="0" x2="0" y2="1")
-            stop(class=["pie-chart__top-color"] offset="0%" stop-color=`${segments[i].topColor}`)
-            stop(class=["pie-chart__bottom-color"] offset="100%" stop-color=`${segments[i].bottomColor}`)
-        - }
-      g(class=["pie-chart__paths"] transform=`translate(${radius},${radius})`)
-        - for(let i = 0; i < segments.length; i += 1) {
-          path(class=["pie-chart__outer-path", `pie-chart__outer-path-${i}`, `js-pie-chart__outer-path-${i}`] style=`fill:url(#${segments[i].name}${i})`
-            data-value=segments[i].value data-name=segments[i].name data-index=i
-            d="M0 0 0 0 A0 0 0 0 1 0 0Z")
-          path(class=["pie-chart__inner-path", `pie-chart__inner-path-${i}`, `js-pie-chart__inner-path-${i}`]
-            data-value=segments[i].value data-name=segments[i].name data-index=i
-            d="M0 0 0 0 A0 0 0 0 1 0 0Z")
-        - }
-      circle(class=["pie-chart__central-circle"] cx="0" cy="0" r=hoveredSubradius transform=`translate(${radius},${radius})`)
+    div(class=["pie-chart__svg-container"])
+      svg(class=["pie-chart__svg"])
+        defs(class=["pie-chart__defs"])
+          - for(let i = 0; i < segments.length; i += 1) {
+            linearGradient(class=["pie-chart__gradient"] id=`${segments[i].name}${i}` x1="0" y1="0" x2="0" y2="1")
+              stop(class=["pie-chart__top-color"] offset="0%" stop-color=`${segments[i].topColor}`)
+              stop(class=["pie-chart__bottom-color"] offset="100%" stop-color=`${segments[i].bottomColor}`)
+          - }
+        g(class=["pie-chart__paths"] transform=`translate(${radius},${radius})`)
+          - for(let i = 0; i < segments.length; i += 1) {
+            path(class=["pie-chart__outer-path", `pie-chart__outer-path-${i}`, `js-pie-chart__outer-path-${i}`] style=`fill:url(#${segments[i].name}${i})`
+              data-value=segments[i].value data-name=segments[i].name data-index=i
+              d="M0 0 0 0 A0 0 0 0 1 0 0Z")
+            path(class=["pie-chart__inner-path", `pie-chart__inner-path-${i}`, `js-pie-chart__inner-path-${i}`]
+              data-value=segments[i].value data-name=segments[i].name data-index=i
+              d="M0 0 0 0 A0 0 0 0 1 0 0Z")
+          - }
+        circle(class=["pie-chart__central-circle"] cx="0" cy="0" r=hoveredSubradius transform=`translate(${radius},${radius})`)
+      div(class=["pie-chart__current-segment"])
+        div(class=["pie-chart__current-segment-value"]) dfgdfg
+        div(class=["pie-chart__current-segment-name"]) ghjhf
+
+    div(class=["pie-chart__chart-list"])
+      - for(let i = 0; i < segments.length; i += 1){
+        div(class=["pie-chart__list-item", `pie-chart__list-item-${i}`] data-index=i)
+          div(class=["pie-chart__item-marker", `pie-chart__item-marker-${i}`])
+          div(class=["pie-chart__item-text", `pie-chart__item-text-${i}`])= segments[i].name
+      - }
 
     button(class=["test-button"]) TEST
