--- a/example.css
+++ b/example.css
@@ -68,16 +68,51 @@ body {
   flex-direction: column; }
 
 .pie-chart {
-  border: 1px solid black;
-  width: 300px;
-  height: 300px; }
+  display: flex;
+  border: 1px solid black; }
+  .pie-chart__svg-container {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative; }
   .pie-chart__svg {
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    position: absolute; }
+  .pie-chart__outer-path {
+    cursor: pointer; }
   .pie-chart__inner-path {
     fill: white; }
   .pie-chart__central-circle {
     fill: white; }
+  .pie-chart__current-segment {
+    /* width: 100%;
+    height: 100%; */
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .pie-chart__chart-list {
+    margin-left: 20px; }
+  .pie-chart__list-item {
+    cursor: pointer;
+    display: flex;
+    align-items: center; }
+  .pie-chart__item-marker {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%; }
+    .pie-chart__item-marker-0 {
+      background: linear-gradient(to bottom, #bc9cff, #8ba4f9); }
+    .pie-chart__item-marker-1 {
+      background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%); }
+    .pie-chart__item-marker-2 {
+      background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%); }
+    .pie-chart__item-marker-3 {
+      background: linear-gradient(180deg, #919191 0%, #3d4975 100%); }
 
 .test-button {
   width: 100px;
