--- a/src/plugin/pie-chart.pug
+++ b/src/plugin/pie-chart.pug
@@ -1,9 +1,9 @@
 mixin pie-chart(options = {})
   -
     const {
-      radius = 150,
-      subradius = 130,
-      hoveredSubradius = 120,
+      outerRadius = 150,
+      innerRadius = 130,
+      hoveredInnerRadius = 120,
       segments = [
         { value: 30, topColor: "rgb(188, 156, 255)", bottomColor: "rgb(139, 164, 249)", name: "name1" },
         { value: 50, topColor: "rgb(111, 207, 151)", bottomColor: "rgb(102, 210, 234)", name: "name2" },
@@ -12,7 +12,7 @@ mixin pie-chart(options = {})
       ],
     } = options;
 
-  div(class=["pie-chart"] data-radius=radius data-subradius=subradius data-hovered-subradius=hoveredSubradius)
+  div(class=["pie-chart"] data-outer-radius=outerRadius data-inner-radius=innerRadius data-hovered-inner-radius=hoveredInnerRadius)
     div(class=["pie-chart__svg-container"])
       svg(class=["pie-chart__svg"])
         defs(class=["pie-chart__defs"])
@@ -21,19 +21,17 @@ mixin pie-chart(options = {})
               stop(class=["pie-chart__top-color"] offset="0%" stop-color=`${segments[i].topColor}`)
               stop(class=["pie-chart__bottom-color"] offset="100%" stop-color=`${segments[i].bottomColor}`)
           - }
-        g(class=["pie-chart__paths"] transform=`translate(${radius},${radius})`)
+        g(class=["pie-chart__paths"] transform=`translate(${outerRadius},${outerRadius})`)
           - for(let i = 0; i < segments.length; i += 1) {
             path(class=["pie-chart__outer-path", `pie-chart__outer-path-${i}`, `js-pie-chart__outer-path-${i}`] style=`fill:url(#${segments[i].name}${i})`
-              data-value=segments[i].value data-name=segments[i].name data-index=i
-              d="M0 0 0 0 A0 0 0 0 1 0 0Z")
+              data-value=segments[i].value data-name=segments[i].name data-index=i)
             path(class=["pie-chart__inner-path", `pie-chart__inner-path-${i}`, `js-pie-chart__inner-path-${i}`]
-              data-value=segments[i].value data-name=segments[i].name data-index=i
-              d="M0 0 0 0 A0 0 0 0 1 0 0Z")
+              data-value=segments[i].value data-name=segments[i].name data-index=i)
           - }
-        circle(class=["pie-chart__central-circle"] cx="0" cy="0" r=hoveredSubradius transform=`translate(${radius},${radius})`)
+        circle(class=["pie-chart__central-circle"] cx="0" cy="0" r=hoveredInnerRadius transform=`translate(${outerRadius},${outerRadius})`)
       div(class=["pie-chart__current-segment"])
-        div(class=["pie-chart__current-segment-value"]) dfgdfg
-        div(class=["pie-chart__current-segment-name"]) ghjhf
+        div(class=["pie-chart__current-segment-value"])
+        div(class=["pie-chart__current-segment-name"])
 
     div(class=["pie-chart__chart-list"])
       - for(let i = 0; i < segments.length; i += 1){
