--- a/src/plugin/pie-chart.scss
+++ b/src/plugin/pie-chart.scss
@@ -2,7 +2,6 @@
 
 .pie-chart {
   display: flex;
-  border: 1px solid black;
 
   &__svg-container {
     width: 300px;
@@ -11,15 +10,14 @@
     justify-content: center;
     align-items: center;
     position: relative;
+
+    border: 1px solid black;
   }
 
   &__svg {
     width: 100%;
     height: 100%;
     position: absolute;
-  }
-
-  &__paths {
   }
 
   &__outer-path {
@@ -35,13 +33,25 @@
   }
 
   &__current-segment {
-    /* width: 100%;
-    height: 100%; */
     position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-weight: bold;
+
+    &-0 {
+      color: $color-purple;
+    }
+    &-1 {
+      color: $color-green;
+    }
+    &-2 {
+      color: $color-peach;
+    }
+    &-3 {
+      color: $color-gray;
+    }
   }
 
   &__chart-list {
