--- a/src/plugin/pie-chart.scss
+++ b/src/plugin/pie-chart.scss
@@ -85,8 +85,10 @@
 }
 
 .test-button {
+  cursor: pointer;
   width: 100px;
   height: 50px;
-  background: blue;
-  border: 1px solid black;
+  margin-left: 20px;
+  background: $gradient-purple-to-blue;
+  color: white;
 }
